--- a/main_Milestone-2.ipynb
+++ b/main_Milestone-2.ipynb
@@ -131,33 +131,6 @@
    ]
   },
   {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": [
-    "import os\n",
-    "\n",
-    "# Path to current directory\n",
-    "current_directory = os.getcwd()\n",
-    "print(f\"Current directory: {current_directory}\")\n",
-    "\n",
-    "# Name of the folder you want to create\n",
-    "figure = \"figure\"\n",
-    "\n",
-    "# Full path to the new folder\n",
-    "Full_figure = os.path.join(current_directory, figure)\n",
-    "\n",
-    "# Create the folder\n",
-    "try:\n",
-    "    os.makedirs(Full_figure, exist_ok=True)\n",
-    "    print(f\"Folder '{figure}' created successfully at {Full_figure}\")\n",
-    "except Exception as e:\n",
-    "    print(f\"Error creating folder: {e}\")"
-   ],
-   "id": "bb6aa033fcbcf16d"
-  },
-  {
    "cell_type": "markdown",
    "id": "a74a58e4d007a935",
    "metadata": {},
@@ -197,7 +170,7 @@
    "outputs": [],
    "source": [
     "## Add in advancedVisualisation (by Youry)\n",
-    "def histogram_2_variables_binned(df, x_bin, hue, shrink, xlabel, ylabel, title, legendTitle, legendLabels, saveName):\n",
+    "def histogram_2_variables_binned(df, x_bin, hue, shrink, xlabel, ylabel, title, legendTitle, legendLabels):\n",
     "    plt.figure(figsize=(10, 6))\n",
     "    sns.histplot(data=df, x=x_bin, hue=hue, multiple='dodge', palette='coolwarm', shrink=shrink)\n",
     "    plt.xlabel(xlabel)\n",
@@ -206,11 +179,10 @@
     "    plt.title(title)\n",
     "    plt.legend(title=legendTitle, labels=legendLabels)\n",
     "    plt.grid(axis=\"y\")\n",
-    "    plt.savefig(f'.../figure/{saveName}.png')\n",
     "    plt.show()\n",
     "\n",
     "\n",
-    "histogram_2_variables_binned(df=train_data, x_bin='shotDistance_bin', hue='isGoal', shrink=0.8, xlabel='Distance du tir (pieds)', ylabel='Nombre de tirs', title='Histogramme du nombre de tirs par distance', legendTitle='', legendLabels=['But', 'Non-but'], saveName='2_1a_histogramme_nbre_tirs_par_distance')"
+    "histogram_2_variables_binned(df=train_data, x_bin='shotDistance_bin', hue='isGoal', shrink=0.8, xlabel='Distance du tir (pieds)', ylabel='Nombre de tirs', title='Histogramme du nombre de tirs par distance', legendTitle='', legendLabels=['But', 'Non-but'])"
    ]
   },
   {
@@ -227,7 +199,9 @@
    "id": "82c884801d8862b3",
    "metadata": {},
    "outputs": [],
-   "source": "histogram_2_variables_binned(df=train_data, x_bin='shotAngle_bin', hue='isGoal', shrink=0.8, xlabel='Angle du tir', ylabel='Nombre de tirs', title='Histogramme du nombre de tirs par angle', legendTitle='', legendLabels=['But', 'Non-but'], saveName='2_1b_histogramme_nbre_tirs_par_angle')"
+   "source": [
+    "histogram_2_variables_binned(df=train_data, x_bin='shotAngle_bin', hue='isGoal', shrink=0.8, xlabel='Angle du tir', ylabel='Nombre de tirs', title='Histogramme du nombre de tirs par angle', legendTitle='', legendLabels=['But', 'Non-but'])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -255,7 +229,6 @@
     "    plt.xlabel(xlabel)\n",
     "    plt.ylabel(ylabel)\n",
     "    plt.title(title)\n",
-    "    plt.savefig(f\".../figure/2_1c_{title}.png\")\n",
     "    plt.show()\n",
     "\n",
     "histogram2D_2_variables(train_data, x='shotDistance', y='shotAngle', bins=20, label='Nombre de tirs', xlabel='Distance du tir (pieds)', ylabel='Angle du tir', title='Histogramme 2D du nombre de tirs par distance et angle')"
@@ -336,7 +309,7 @@
     "df_distance_goal_rate = train_data.groupby('shotDistance')['isGoal'].mean().reset_index()\n",
     "df_distance_goal_rate.columns = ['shotDistance', 'goalRate']\n",
     "\n",
-    "# df_distance_goal_rate"
+    "df_distance_goal_rate"
    ]
   },
   {
@@ -376,7 +349,7 @@
     "df_angle_goal_rate = train_data.groupby('shotAngle')['isGoal'].mean().reset_index()\n",
     "df_angle_goal_rate.columns = ['shotAngle', 'goalRate']\n",
     "\n",
-    "# df_angle_goal_rate"
+    "df_angle_goal_rate"
    ]
   },
   {
@@ -425,10 +398,10 @@
    "outputs": [],
    "source": [
     "# Tracer la courbe\n",
-    "def plot_goal_rate(df, x, y, rate, rate_min, rate_max, plotTitle, title, fontSize, xlabel, sizeXlabel, ylabel, sizeYlabel, saveName):\n",
+    "def plot_goal_rate(df, x, y, rate, rate_min, rate_max, plotTitle, title, fontSize, xlabel, sizeXlabel, ylabel, sizeYlabel):\n",
     "    # Histogramme\n",
     "    plt.figure(figsize=(10, 6))\n",
-    "    bars = plt.bar(df.index, df[rate]*100, color='blue', label=plotTitle)\n",
+    "    bars = plt.bar(df.index, df[rate]*100, color='green', label=plotTitle)\n",
     "    # Annoter les ratios sur les barres\n",
     "    for bar, (_, row) in zip(bars, df.iterrows()):\n",
     "        x_i = int(row[x])\n",
@@ -451,11 +424,10 @@
     "    plt.grid(alpha=0.5)\n",
     "    # plt.legend()\n",
     "    plt.tight_layout()\n",
-    "    plt.savefig(f\".../figure/{saveName}.png\")\n",
     "    plt.show()\n",
     "\n",
     "\n",
-    "plot_goal_rate(goal_stats_by_distance, 'goals', 'total_shots', 'goal_rate', 0, 20, 'Taux de but', 'Taux de but en fonction de la distance', 14, 'Distance de tir', 12, 'Taux de but (%)', 12, saveName='2_2a_Taux de but en fonction de la distance')"
+    "plot_goal_rate(goal_stats_by_distance, 'goals', 'total_shots', 'goal_rate', 0, 20, 'Taux de but', 'Taux de but en fonction de la distance', 14, 'Distance de tir', 12, 'Taux de but (%)', 12)"
    ]
   },
   {
@@ -483,7 +455,9 @@
    "id": "f8af52da7e7e3998",
    "metadata": {},
    "outputs": [],
-   "source": "plot_goal_rate(goal_stats_by_angle, 'goals', 'total_shots','goal_rate', 0, 100, 'Taux de but', 'Taux de but en fonction de l\\'angle', 14, 'Angle de tir', 12, 'Taux de but', 12, saveName='2_2b_Taux de but en fonction de l\\'angle')"
+   "source": [
+    "plot_goal_rate(goal_stats_by_angle, 'goals', 'total_shots','goal_rate', 0, 100, 'Taux de but', 'Taux de but en fonction de l\\'angle', 14, 'Angle de tir', 12, 'Taux de but', 12)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -705,7 +679,7 @@
     "accuracy = accuracy_score(y_val, y_pred)\n",
     "f1 = f1_score(y_val, y_pred, average=\"weighted\")\n",
     "print(f\"Précision du modèle sur l'ensemble de validation: {accuracy:.2f}\")\n",
-    "print(f\"\\nF1-score du modèle sur l'ensemble de validation: {f1:.2f}\")"
+    "print(f\"F1-score du modèle sur l'ensemble de validation: {f1:.2f}\")"
    ]
   },
   {
@@ -817,7 +791,7 @@
     "# ROC\n",
     "RocCurveDisplay.from_predictions(y_val, y_proba_but, name=\"Régression logistique\", color=\"blue\", ax=plt.gca())\n",
     "RocCurveDisplay.from_predictions(y_val, y_proba_random, name=\"Classificateur aléatoire\", color=\"gray\", linestyle=\"--\", ax=plt.gca())\n",
-    "plt.title(\"Courbes ROC\")\n",
+    "plt.title(\"ROC Curves for Logistic Regression Models\")\n",
     "plt.grid(True)\n",
     "plt.show()"
    ]
@@ -1093,9 +1067,8 @@
     "RocCurveDisplay.from_predictions(y2_val, y_proba_but_both, name=\"Distance + Angle\", color=\"red\", ax=plt.gca())\n",
     "RocCurveDisplay.from_predictions(y2_val, y2_proba_random, name=\"Random Baseline\", color=\"gray\", linestyle=\"--\", ax=plt.gca())\n",
     "\n",
-    "plt.title(\"Courbes ROC\")\n",
+    "plt.title(\"ROC Curves for Logistic Regression Models\")\n",
     "plt.grid(True)\n",
-    "# plt.savefig('2-3-3a_proportion_de_buts.png')\n",
     "plt.show()"
    ]
   },
@@ -1147,7 +1120,6 @@
     "# plt.ylim(0, 100)\n",
     "plt.grid(True)\n",
     "plt.legend()\n",
-    "# plt.savefig('2-3-3b_proportion_de_buts.png')\n",
     "plt.show()\n"
    ]
   },
@@ -1198,7 +1170,7 @@
     "\n",
     "plt.legend(fontsize=12)\n",
     "plt.tight_layout()\n",
-    "# plt.savefig('2-3-3c_proportion_de_buts.png')\n",
+    "plt.savefig('./images/2-3-3c_proportion_de_buts.png')\n",
     "plt.show()\n"
    ]
   },
@@ -2681,7 +2653,122 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO: CODE ICI"
+    "characteristics = ['shotDistance']\n",
+    "\n",
+    "x_test_rl = regular_test_data[characteristics].dropna()\n",
+    "y_test_rl = regular_test_data['isGoal'][x_test.index].to_numpy()\n",
+    "\n",
+    "characteristics = ['shotAngle']\n",
+    "\n",
+    "x_test_rl_2 = regular_test_data[characteristics].dropna()\n",
+    "y_test_rl_2 = regular_test_data['isGoal'][x_test_rl_2.index].to_numpy()\n",
+    "\n",
+    "characteristics = ['shotDistance', 'shotAngle']\n",
+    "\n",
+    "x_test_rl_3 = regular_test_data[characteristics].dropna()\n",
+    "y_test_rl_3 = regular_test_data['isGoal'][x_test_rl_3.index].to_numpy()\n",
+    "\n",
+    "run = wandb.init(project=config.WANDB_PROJECT_NAME, entity=config.WANDB_TEAM_NAME)\n",
+    "\n",
+    "# Access and download model. Returns path to downloaded artifact\n",
+    "downloaded_model_path = run.use_model(name = \"LogisticRegression_Distance:latest\")\n",
+    "\n",
+    "# Charger le modèle\n",
+    "with open(downloaded_model_path, \"rb\") as file:  # \"rb\" signifie lecture en mode binaire\n",
+    "    rl_model = pickle.load(file)\n",
+    "\n",
+    "downloaded_model_path = run.use_model(name = \"LogisticRegression_Angle:latest\")\n",
+    "\n",
+    "# Charger le modèle\n",
+    "with open(downloaded_model_path, \"rb\") as file:  # \"rb\" signifie lecture en mode binaire\n",
+    "    rl_model_2 = pickle.load(file)\n",
+    "\n",
+    "downloaded_model_path = run.use_model(name = \"LogisticRegression_Distance_Angle:latest\")\n",
+    "\n",
+    "# Charger le modèle\n",
+    "with open(downloaded_model_path, \"rb\") as file:  # \"rb\" signifie lecture en mode binaire\n",
+    "    rl_model_3 = pickle.load(file)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67c67cb2-ae6d-4742-9bf8-b62100ebdfcb",
+   "metadata": {},
+   "source": [
+    "#### Distance seulement"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4233e832-f19f-472f-b473-891003e8e62d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred_prob_rl = rl_model.predict_proba(x_test_rl)[:, 1]\n",
+    "y_pred_rl = rl_model.predict(x_test_rl)\n",
+    "\n",
+    "auc_roc = roc_auc_score(y_test_rl, y_pred_prob_rl)\n",
+    "f1 = f1_score(y_pred_rl, y_test_rl, average=\"weighted\")\n",
+    "ece = compute_ece(y_test_rl, y_pred_prob_rl)\n",
+    "\n",
+    "print(f\"F1 pondéré: {f1}\")\n",
+    "print(f\"AUC: {auc_roc}\")\n",
+    "print(f\"ece: {ece}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55f4debf-3b7f-4922-aa86-5a08928bb13f",
+   "metadata": {},
+   "source": [
+    "#### Angle seulement"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a3632e21-5806-4c18-8ff9-eb4e7ea70a1e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred_prob_rl_2 = rl_model_2.predict_proba(x_test_rl_2)[:, 1]\n",
+    "y_pred_rl_2 = rl_model_2.predict(x_test_rl_2)\n",
+    "\n",
+    "auc_roc = roc_auc_score(y_test_rl_2, y_pred_prob_rl_2)\n",
+    "f1 = f1_score(y_pred_rl_2, y_test_rl_2, average=\"weighted\")\n",
+    "ece = compute_ece(y_test_rl_2, y_pred_prob_rl_2)\n",
+    "\n",
+    "print(f\"F1 pondéré: {f1}\")\n",
+    "print(f\"AUC: {auc_roc}\")\n",
+    "print(f\"ece: {ece}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc3be44e-c441-4844-8a9e-7ceec3296be5",
+   "metadata": {},
+   "source": [
+    "### Distance et angle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cfd0dc13-f390-4197-a9d1-674ad60a502d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred_prob_rl_3 = rl_model_3.predict_proba(x_test_rl_3)[:, 1]\n",
+    "y_pred_rl_3 = rl_model_3.predict(x_test_rl_3)\n",
+    "\n",
+    "auc_roc = roc_auc_score(y_test_rl_3, y_pred_prob_rl_3)\n",
+    "f1 = f1_score(y_pred_rl_3, y_test_rl_3, average=\"weighted\")\n",
+    "ece = compute_ece(y_test_rl_3, y_pred_prob_rl_3)\n",
+    "\n",
+    "print(f\"F1 pondéré: {f1}\")\n",
+    "print(f\"AUC: {auc_roc}\")\n",
+    "print(f\"ece: {ece}\")"
    ]
   },
   {
@@ -2702,7 +2789,7 @@
     "characteristics = xgb_num_characteristics + xgb_categorial_characteristics\n",
     "\n",
     "x_test = regular_test_data[characteristics].dropna()\n",
-    "y_test = regular_test_data['isGoal'][x_test.index].to_numpy()\n",
+    "y_test_xgb = regular_test_data['isGoal'][x_test.index].to_numpy()\n",
     "\n",
     "x_test_transformed = full_pipeline.fit_transform(x_test)\n",
     "\n",
@@ -2727,9 +2814,9 @@
     "y_pred_prob_xgb = xgb_model.predict_proba(x_test_transformed)[:, 1]\n",
     "y_pred_xgb = xgb_model.predict(x_test_transformed)\n",
     "\n",
-    "auc_roc = roc_auc_score(y_test, y_pred_prob_xgb)\n",
-    "f1 = f1_score(y_pred_xgb, y_test, average=\"weighted\")\n",
-    "ece = compute_ece(y_test, y_pred_prob_xgb)\n",
+    "auc_roc = roc_auc_score(y_test_xgb, y_pred_prob_xgb)\n",
+    "f1 = f1_score(y_pred_xgb, y_test_xgb, average=\"weighted\")\n",
+    "ece = compute_ece(y_test_xgb, y_pred_prob_xgb)\n",
     "\n",
     "print(f\"F1 pondéré: {f1}\")\n",
     "print(f\"AUC: {auc_roc}\")\n",
@@ -2785,6 +2872,130 @@
     "\n",
     "# Access and download model. Returns path to downloaded artifact\n",
     "downloaded_model_path = run.use_model(name = \"Perceptron_best_model:latest\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ea3eda5-6f8d-42df-b401-335369b2470f",
+   "metadata": {},
+   "source": [
+    "### Courbes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c09af673-ba10-49c0-8dac-5c460b01ada3",
+   "metadata": {},
+   "source": [
+    "#### ROC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22472007-dc53-4655-85c4-f3beece665f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Tracer les courbes ROC\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "RocCurveDisplay.from_predictions(y_test_rl, y_pred_prob_rl, name=\"Reg Log Distance\", color=\"blue\", ax=plt.gca())\n",
+    "RocCurveDisplay.from_predictions(y_test_rl_2, y_pred_prob_rl_2, name=\"Reg Log Angle\", color=\"green\", ax=plt.gca())\n",
+    "RocCurveDisplay.from_predictions(y_test_rl_3, y_pred_prob_rl_3, name=\"Reg Log Distance + Angle\", color=\"red\", ax=plt.gca())\n",
+    "RocCurveDisplay.from_predictions(y_test_xgb, y_pred_prob_xgb, name=\"XGBoost\", color=\"yellow\", ax=plt.gca())\n",
+    "\n",
+    "\n",
+    "plt.title(\"ROC Curves for Models - regular season\")\n",
+    "plt.grid(True)\n",
+    "plt.savefig('test_set_q1_roc.png', dpi=300)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03782c4e-1cd0-48f6-a2e1-0ab094ae71db",
+   "metadata": {},
+   "source": [
+    "#### Taux de buts vs percentile de probabilité "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22a9b6ce-b769-4a47-8bd0-ffadcda2e510",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "percentiles = np.linspace(0, 100, 11)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58a73b63-4740-4da2-9eff-814848285018",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "goal_rate_distance = compute_goal_rate_by_percentile(y_test_rl, y_pred_prob_rl, percentiles)\n",
+    "goal_rate_angle = compute_goal_rate_by_percentile(y_test_rl_2, y_pred_prob_rl_2, percentiles)\n",
+    "goal_rate_both = compute_goal_rate_by_percentile(y_test_rl_3, y_pred_prob_rl_3, percentiles)\n",
+    "goal_rate_xgb = compute_goal_rate_by_percentile(y_test_xgb, y_pred_prob_xgb, percentiles)\n",
+    "\n",
+    "# Tracer les taux de buts\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.plot(percentiles[:-1], goal_rate_distance, label=\"Reg Log Distance\", color=\"blue\")\n",
+    "plt.plot(percentiles[:-1], goal_rate_angle, label=\"Reg Log Angle\", color=\"green\")\n",
+    "plt.plot(percentiles[:-1], goal_rate_both, label=\"Reg Log Distance + Angle\", color=\"red\")\n",
+    "plt.plot(percentiles[:-1], goal_rate_xgb, label=\"Random Baseline\", color=\"yellow\")\n",
+    "\n",
+    "# Personnalisation du graphique\n",
+    "ax = plt.gca()\n",
+    "ax.grid()\n",
+    "ax.set_facecolor('0.95')\n",
+    "\n",
+    "ax.set_ylim([0, 100])\n",
+    "ax.set_xlim([0, 100])\n",
+    "ax.invert_xaxis()\n",
+    "major_ticks = np.arange(0, 110, 10)\n",
+    "ax.set_xticks(major_ticks)\n",
+    "ax.set_yticks(major_ticks)\n",
+    "\n",
+    "plt.title(\"Taux de buts par centile de probabilité\")\n",
+    "plt.xlabel(\"Centile de probabilité\")\n",
+    "# plt.xlim(100,0)\n",
+    "plt.ylabel(\"Taux de buts (%)\")\n",
+    "# plt.ylim(0, 100)\n",
+    "plt.grid(True)\n",
+    "plt.legend()\n",
+    "plt.savefig('test_set_q1_goal_rate.png', dpi=300)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24149d82-f9c4-4717-b3ac-ccfe9734f2ca",
+   "metadata": {},
+   "source": [
+    "#### Diagramme de fiabilité"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f9d5fe79-c2eb-42b9-ba7a-b574c3b990b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(figsize=(8, 6))\n",
+    "\n",
+    "CalibrationDisplay.from_predictions(y_test_rl, y_pred_prob_rl, n_bins=10, ax=ax, name=\"Reg log : distance\")\n",
+    "CalibrationDisplay.from_predictions(y_test_rl_2, y_pred_prob_rl_2, n_bins=10, ax=ax, name=\"Reg log : angle\")\n",
+    "CalibrationDisplay.from_predictions(y_test_rl_3, y_pred_prob_rl_3, n_bins=10, ax=ax, name=\"Reg log : both\")\n",
+    "CalibrationDisplay.from_predictions(y_test_rl_3, y_pred_prob_rl_3, n_bins=10, ax=ax, name=\"XGBoost\")\n",
+    "\n",
+    "plt.title(\"Diagramme de fiabilité\")\n",
+    "plt.savefig('test_set_q1_reliability_diagram.png', dpi=300)\n",
+    "plt.show()"
    ]
   },
   {
