Youry - Images + update blog

--- a/blogpost-template-main/_posts/2024-11-16-ift6758-milestone-2.md
+++ b/blogpost-template-main/_posts/2024-11-16-ift6758-milestone-2.md
@@ -6,24 +6,27 @@ toc: true
 
 ## Ingénierie des caractéristiques I
 
+*Note*: L'angle de tir (shotAngle) a été calculé **de 0 à 180°** dans ce Milestone.
+De 0 à 90° pour les tirs qui sont effectués depuis l'avant, et de 90 à 180° pour les tirs exécutés depuis l'arrière.
+
 ### 1- Analyse de la fréquence de tirs, par distance et angle de tir
 #### 1.a- Histogramme du nombre de tirs, regroupé par distance de tir
-![2_1a_histogramme_nbre_tirs_par_distance.png](../../figure/2_1a_histogramme_nbre_tirs_par_distance.png)
+![2_1a_histogramme_nbre_tirs_par_distance.png](/public/2_1a_histogramme_nbre_tirs_par_distance.png)
 Les tirs se font tout près du gardien, particulièrement à moins de 60 pieds. Du coup, aussi, la chance de but est plus élevée si le tir a été effectué plus proche du gardien.
 #### 1.b- Histogramme du nombre de tirs, regroupé par angle de tir
-![2_1b_histogramme_nbre_tirs_par_angle.png](../../figure/2_1b_histogramme_nbre_tirs_par_angle.png)
+![2_1b_histogramme_nbre_tirs_par_angle.png](/public/2_1b_histogramme_nbre_tirs_par_angle.png)
 La majorité des tirs ont été effectué à un angle de moins de 90 degrés par rapport à l'axe du milieu du filet du gardien. De plus, plus le tir a été fait en face du gardien (angle plus petit), plus la chance de but est plus élevée.
 #### 1.c- Histogramme du nombre de tirs, regroupé par angle de tir
 #### Histogramme 2D : Distance et angle de tir
-![2_1c_Histogramme 2D du nombre de tirs par distance et angle.png](../../figure/2_1c_Histogramme%202D%20du%20nombre%20de%20tirs%20par%20distance%20et%20angle.png)
+![2_1c_Histogramme 2D du nombre de tirs par distance et angle.png](/public/2_1c_Histogramme%202D%20du%20nombre%20de%20tirs%20par%20distance%20et%20angle.png)
 Les tirs sont plus fréquents à une distance d'entre 10 et 65, et un angle de moins de 50 degrés, du gardien.
 
 ### 2- Analyse du taux de but, par rapport à la distance et l'angle de tir
 #### 2.a- Taux de but par distance de tir
-![2_2a_Taux de but en fonction de la distance.png](../../figure/2_2a_Taux%20de%20but%20en%20fonction%20de%20la%20distance.png)
+![2_2a_Taux de but en fonction de la distance.png](/public/2_2a_Taux%20de%20but%20en%20fonction%20de%20la%20distance.png)
 Un joeur a 17.4% de chance de scorer s'il effectue un tir à moins de 20 pieds de distance du gardien, et 9.1% de chance à une distance entre 20 et 40 pieds.
 #### 2.a- Taux de but par angle de tir
-![2_2b_Taux de but en fonction de l'angle.png](../../figure/2_2b_Taux%20de%20but%20en%20fonction%20de%20l%27angle.png)
+![2_2b_Taux de but en fonction de l'angle.png](/public/2_2b_Taux%20de%20but%20en%20fonction%20de%20l%27angle.png)
 Concernant l'angle de tir par rapport l'axe du milieu du filet du gardien, un joeur a 11.7% de chance de scorer s'il effectue un tir à moins de 20 degrés du gardien, et 8.2% à un angle d'entre 20 et 40 degrés.
 Toutefois, il faut remarquer qu'un tir effectué à un angle entre 160 et 180 a 85.7% de chance d'être but.
 
@@ -85,7 +88,7 @@ qui est impossible, car un tir de type **wrap-around** est toujours proche des f
 ### - Modèles de Régression Linéaire : Distance, Angle, Distance et Angle
 
 #### - Courbes ROC/AUC
-![2_3_3a_Courbes ROC.png](../../figure/2_3_3a_Courbes%20ROC.png)
+![2_3_3a_Courbes ROC.png](/public/2_3_3a_Courbes%20ROC.png)
 - Liens WandB :
   - [Modèle avec Distance seulement](https://wandb.ai/youry-macius-universite-de-montreal/IFT6758.2024-A11/runs/ggw9aqju?nw=nwuseryourymacius)
   - [Modèle avec Angle seulement](https://wandb.ai/youry-macius-universite-de-montreal/IFT6758.2024-A11/runs/vs7ri7mc?nw=nwuseryourymacius)
@@ -96,11 +99,11 @@ qui est impossible, car un tir de type **wrap-around** est toujours proche des f
   - Tandis que le modèle avec la distance et l'angle est le plus performant, avec un AUC de 0.71
 
 #### - Taux de buts et proportion cumulée de buts, en fonction du centile de probabilité
-![2_3_3b_Taux de buts par centile de probabilité.png](../../figure/2_3_3b_Taux%20de%20buts%20par%20centile%20de%20probabilit%C3%A9.png)
-![2_3_3c_Pourcentage cumulatif de Buts.png](../../figure/2_3_3c_Pourcentage%20cumulatif%20de%20Buts.png)
+![2_3_3b_Taux de buts par centile de probabilité.png](/public/2_3_3b_Taux%20de%20buts%20par%20centile%20de%20probabilit%C3%A9.png)
+![2_3_3c_Pourcentage cumulatif de Buts.png](/public/2_3_3c_Pourcentage%20cumulatif%20de%20Buts.png)
 - Ces courbes montrent la capacité du modèle à prédire des buts en fonction de la probabilité qu'il attribue à chaque tir. Donc, plus la probabilité de tir est élevée, plus le modèle arrive à prédire des buts.
 #### - Diagramme de fiabilité
-![2_3_3d_Diagramme de fiabilité.png](../../figure/2_3_3d_Diagramme%20de%20fiabilit%C3%A9.png)
+![2_3_3d_Diagramme de fiabilité.png](/public/2_3_3d_Diagramme%20de%20fiabilit%C3%A9.png)
 - Le modèle avec la distance et l'angle donne une meilleure representation de la la relation entre la probabilité prédite et la fréquence réelle.
 
 Conclusion : Le modele avec la distance et l'angle est plus performant, en notant toutefois que celui avec l'angle seulement est le moins performant.
@@ -122,7 +125,6 @@ Certaines caractéristiques ont simplement été adaptées par rapport au Milest
 - Coordonnées y (yCoord) : ordonnées de l'action par rapport au centre (ordonnée à l'origine)
 - Distance de tir (shotDistance) : distance euclidienne (en pieds) du tir par rapport au filet.
   Pour cela, prendre en compte la période et le côté de l'équipe
-- Angle de tir (shotAngle) : angle du tir (de 0 à 90°) par rapport au filet.
 - Type de tir (shotType) : type de tir utilisé (slap, wrist, etc...).
 
 #### 2. Caractéristiques des évènements précédents
@@ -209,107 +211,6 @@ On remarque sur les graphiques que malgré cette diminution de pres de moitié d
 à celui du modèle XGBoost de base (**0.71**). De plus, ce nouveau modèle est toujours bien calibré.
 
 Expérience sur wandb: https://wandb.ai/youry-macius-universite-de-montreal/IFT6758.2024-A11/runs/72lbqaj4?nw=nwuserfranckmichaelatongfor
-
-## Faites de votre mieux
-
-Au cours de cette étape, nous avons testé plusieurs modèles, utilisé plusieurs approches pour optimiser nos résultats.
-
-Nous avons commencé par utiliser des réseaux de neurones Perceptron et multicouches (MLP) pour évaluer différentes
-architectures. Le modèle de base (`Perceptron`) nous a servi de point de départ pour nos expérimentations. Ensuite, nous
-avons introduit
-des modèles plus complexes (`MLP_H1` et `MLP_H2`), avec une et deux couches cachées. Cela permettait de capturer les
-interactions entre les caractéristiques
-
-Malheureusement, l'optimisation s'est avérée être un défi majeur, nécessitant des ressources que nous n'avions pas à
-disposition. Face à ces cela, nous avons dû opter pour des méthodes plus simples, capables de s’entraîner avec un
-temps d'inférence raisonnable.
-
-La solution a été de nous tourner vers des modèles tels que les forêts aléatoires et les KNN, en restreignant les plages
-de recherche pour les hyper-paramètres afin de réduire la complexité computationnelle. Malgré ces limitations, nous
-avons
-déployé diverses techniques pour maximiser la qualité de nos prédictions avec ces approches.
-
-Dans les sections suivantes, nous détaillerons les méthodes employées pour améliorer les performances dans ces deux cas.
-
-### Métriques de Performance
-
-L'accuracy peut être trompeuse dans le cas de classes déséquilibrées comme les tirs au but.
-Ainsi, nous avons préféré utiliser le F1-score pondéré, qui met en balance la précision et le rappel,
-offrant une évaluation plus précise de notre capacité à identifier les buts tout en limitant les faux positifs et les
-faux négatifs.
-
-### Choix de la répartition des données
-
-Pour commencer, j’ai utilisé une stratégie de validation croisée en k-folds pour maximiser la robustesse des évaluations
-du modèle. Cette méthode divise les données en k sous-ensembles ou folds, avec chaque sous-ensemble prenant à tour de
-rôle le rôle de l’ensemble de validation pendant que les autres sont utilisés pour l’entraı̂nement.
-
-### La régularisation
-
-Les réseaux de neurones ont tendance à trop se spécialiser. Pour contrôler l’overfitting, deux stratégies de
-régularisation principales ont été appliquées : le dropout et la régularisation L2. Le dropout consiste à désactiver de
-manière aléatoire un certain pourcentage de neurones à chaque étape d’entraı̂nement. Sinon le réseaux devient trop
-dépendant de certaines connexions spécifiques et favorise la généralisation. La régularisation L2 pénalise les poids
-excessifs en ajoutant une contrainte à la fonction de perte, ce qui encourage le modèle à rechercher des solutions plus
-simples et moins sensibles aux variations des données.
-
-### Équilibre des classes
-
-Les buts représentent une fraction infime des événements, créant un déséquilibre. Pour compenser cela, nous avons
-introduit une pondération des classes directement dans la fonction de perte `BCEWithLogitsLoss`. De plus, un
-échantillonnage pondéré via `WeightedRandomSampler` ajuste la probabilité que les classes minoritaires soient incluses
-dans les lots d’entraînement, garantissant ainsi un apprentissage plus équilibré.
-
-### Optimisation des hyper-paramètres
-
-Pour optimiser les performances de nos modèles, nous avons utilisé **Optuna** pour une optimisation bayésienne des
-hyper-paramètres. Contrairement à la recherche aléatoire ou à la recherche par grille, cette méthode s’appuie sur un
-modèle
-probabiliste qui ajuste les hyper-paramètres de manière itérative en utilisant les résultats des expérimentations
-précédentes.
-Nous avons pu optimiser les résultats dans les plages suivantes :
-
-- La **taille des batches** dans une plage de 32 à 256.
-- Le **taux d'apprentissage**, : taux d'apprentissage logarithmique entre (10⁻⁵) et (10⁻¹).
-- Le **poids de régularisation** : contrôler la complexité des modèles et éviter l'overfitting
-- Le **minority_weight** : compenser le déséquilibre des classes dans les données de hockey, où les
-  buts sont relativement rares par rapport aux tirs totaux.
-- **infer_threshold**: compense également le déséquilibre des classes, mais cette fois-ci, s'applique directement à
-  la prédiction
-
-### Chaque run correspond à un trial :
-https://wandb.ai/youry-macius-universite-de-montreal/IFT6758.2024-A11?nw=nwuserthierrypoey
-
-#### Pour obtenir le détail de toutes les runs :
-
-Filter -> Group -> "nomDuModele"
-
-Il y a 3 algorithmes enregistrés :
-  - Meilleur KNN (https://wandb.ai/youry-macius-universite-de-montreal/IFT6758.2024-A11/runs/9oaukztb?nw=nwuserthierrypoey)
-  - Meilleur Perceptron (https://wandb.ai/youry-macius-universite-de-montreal/IFT6758.2024-A11/runs/nj2fdg0x?nw=nwuserthierrypoey)
-  - Meilleur RandomForest (https://wandb.ai/youry-macius-universite-de-montreal/IFT6758.2024-A11/runs/1y3e9fv9?nw=nwuserthierrypoey)
-
-
-
-### Visualisations des Performances
-
-**Courbes ROC/AUC**:
-
-![](/public/RandomForest_trial_10_roc_curve.svg)
-
-Random Forest : La courbe ROC montre une très bonne séparation des classes, avec une aire sous la courbe (AUC) élevée.
-Cela indique une bonne performance pour la distinction entre les buts et les non-buts.
-
-Perceptron : Il semble légèrement moins précis que Random Forest, avec une AUC inférieure. Il a du mal à capturer des
-relations complexes dans les données.
-
-KNN atteint un bon score AUC dans vos expériences. Il est efficace pour capturer les relations simples.
-On note quand même une dépendance forte à la métrique de distance Euclidienne, qui pourrait être optimale pour séparer
-les buts.
-
-**Taux de But par Centile de Probabilité** :
-
-![](/public/RandomForest_trial_10_goal_rate_vs_probability_percentile.svg)
 
 ## Faites de votre mieux
 
