--- a/main_Milestone-3.ipynb
+++ b/main_Milestone-3.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true,
     "ExecuteTime": {
      "end_time": "2024-12-17T18:46:45.187263Z",
      "start_time": "2024-12-17T18:46:43.482023Z"
     }
    },
+   "outputs": [],
    "source": [
     "import requests\n",
     "\n",
@@ -22,57 +23,57 @@
     "    \"model_name\": \"LogisticRegression_Distance_Angle\", # valeurs possibles : LogisticRegression_Distance_Angle, LogisticRegression_Distance\n",
     "}\n",
     "\n",
-    "r = requests.post(\"http://127.0.0.1:5000/download_registry_model\", json=data)"
-   ],
-   "outputs": [],
-   "execution_count": 1
+    "r = requests.post(\"http://127.0.0.1:5000/download_registry_model\", json=data)\n",
+    "print(r.json())"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42b3c184500e6a0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-12-17T18:48:14.332390Z",
      "start_time": "2024-12-17T18:48:14.324128Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "data = {\n",
     "    \"distance\": [8, 40],\n",
     "    \"angle\": [20, 80],\n",
     "}\n",
     "\n",
-    "r = requests.post(\"http://127.0.0.1:5000/predict\", json=data)"
-   ],
-   "id": "42b3c184500e6a0",
-   "outputs": [],
-   "execution_count": 5
+    "r = requests.post(\"http://127.0.0.1:5000/predict\", json=data)\n",
+    "print(r.json())"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": "",
-   "id": "f29b40126329bf28"
+   "id": "f29b40126329bf28",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
