Implémentation de la partie Client

--- a/main_Milestone-3.ipynb
+++ b/main_Milestone-3.ipynb
@@ -2,59 +2,62 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "initial_id",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-12-17T18:46:45.187263Z",
-     "start_time": "2024-12-17T18:46:43.482023Z"
-    }
-   },
-   "outputs": [],
+   "id": "f29b40126329bf28",
+   "metadata": {},
    "source": [
-    "import requests\n",
+    "import pandas as pd\n",
+    "\n",
+    "from milestone3.ift6758.ift6758.client import *\n",
     "\n",
     "WANDB_PROJECT_NAME = \"IFT6758.2024-A11\"\n",
     "WANDB_TEAM_NAME = \"youry-macius-universite-de-montreal\"\n",
     "\n",
-    "data = {\n",
-    "    \"project_name\": WANDB_PROJECT_NAME,\n",
-    "    \"entity_name\": WANDB_TEAM_NAME,\n",
-    "    \"model_name\": \"LogisticRegression_Distance_Angle\", # valeurs possibles : LogisticRegression_Distance_Angle, LogisticRegression_Distance\n",
-    "}\n",
     "\n",
-    "r = requests.post(\"http://127.0.0.1:5000/download_registry_model\", json=data)\n",
-    "print(r.json())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "42b3c184500e6a0",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-12-17T18:48:14.332390Z",
-     "start_time": "2024-12-17T18:48:14.324128Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "data = {\n",
-    "    \"distance\": [8, 40],\n",
-    "    \"angle\": [20, 80],\n",
-    "}\n",
+    "def main():\n",
+    "    # Init\n",
+    "    client = ServingClient(ip=\"127.0.0.1\", port=5000)\n",
     "\n",
-    "r = requests.post(\"http://127.0.0.1:5000/predict\", json=data)\n",
-    "print(r.json())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f29b40126329bf28",
-   "metadata": {},
+    "    # Predictions\n",
+    "    print(\"\\nTesting Predict\")\n",
+    "    df = pd.DataFrame({\n",
+    "        \"distance\": [10, 20, 30],\n",
+    "        \"angle\": [45, 60, 90]\n",
+    "    })\n",
+    "\n",
+    "    try:\n",
+    "        predictions = client.predict(df)\n",
+    "        print(\"Predictions:\")\n",
+    "        print(predictions)\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error prediction: {e}\")\n",
+    "\n",
+    "    # Logs\n",
+    "    print(\"\\nTesting Logs\")\n",
+    "    try:\n",
+    "        logs = client.logs()\n",
+    "        print(\"Logs:\", logs)\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error logs: {e}\")\n",
+    "\n",
+    "    # Download model\n",
+    "    print(\"\\n Testing download model\")\n",
+    "    workspace = WANDB_PROJECT_NAME + \"/\" + WANDB_TEAM_NAME\n",
+    "    model = \"LogisticRegression_Distance_Angle\"\n",
+    "    version = \"latest\"\n",
+    "\n",
+    "    try:\n",
+    "        result = client.download_registry_model(workspace=workspace, model=model, version=version)\n",
+    "        print(\"Model Download Result:\")\n",
+    "        print(result)\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error downloading model: {e}\")\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()\n"
+   ],
    "outputs": [],
-   "source": []
+   "execution_count": null
   }
  ],
  "metadata": {
